--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -655,6 +655,8 @@
 				<escidoc.pid.service.update.path>/write/modify</escidoc.pid.service.update.path>
 				<escidoc.pid.service.search.path>/read/search</escidoc.pid.service.search.path>
 				
+				<escidoc.transformation.mab.content.url.prefix>http://migration-coreservice.mpdl.mpg.de/import/linguistic_literature/</escidoc.transformation.mab.content.url.prefix>
+				
 			</properties>
 			
 				<distributionManagement>
@@ -896,6 +898,8 @@
 				<escidoc.pid.service.delete.path>/write/delete</escidoc.pid.service.delete.path>
 				<escidoc.pid.service.update.path>/write/modify</escidoc.pid.service.update.path>
 				<escidoc.pid.service.search.path>/read/search</escidoc.pid.service.search.path>
+				
+				<escidoc.transformation.mab.content.url.prefix>http://migration-coreservice.mpdl.mpg.de/import/linguistic_literature/</escidoc.transformation.mab.content.url.prefix>
 				
 			</properties>
 				<distributionManagement>
