--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -449,7 +449,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.43</version>
+            <version>1.0.44-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -462,7 +462,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>citationmanager</artifactId>
-            <version>1.0.46</version>
+            <version>1.0.47-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -476,14 +476,14 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>structuredexportmanager</artifactId>
-            <version>1.0.43</version>
+            <version>1.0.44-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>validation</artifactId>
-            <version>1.0.44</version>
+            <version>1.0.45-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -511,7 +511,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>transformation</artifactId>
-            <version>1.0.28</version>
+            <version>1.0.29-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -524,7 +524,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>search</artifactId>
-            <version>1.0.40</version>
+            <version>1.0.41-SNAPSHOT</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -573,7 +573,7 @@
         <dependency>
            <groupId>de.mpg.escidoc.services</groupId>
            <artifactId>pid_cache_presentation</artifactId>
-           <version>0.1.3</version>
+           <version>0.1.4-SNAPSHOT</version>
            <scope>compile</scope>
            <type>war</type>
        </dependency>
