--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -77,7 +77,7 @@ escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 # URL of the escidoc-core instance you like to logon to
-escidoc.framework_access.login.url=${escidoc.common.framework.login.url}
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
@@ -217,6 +217,8 @@ escidoc.pid.service.update.path=${escidoc.pid.service.update.path}
 escidoc.pid.service.search.path=${escidoc.pid.service.search.path}
 escidoc.pid.gwdg.user.login=${escidoc.pid.gwdg.user.login}
 escidoc.pid.gwdg.user.password=${escidoc.pid.gwdg.user.password}
+escidoc.pidcache.user.name=${escidoc.pidcache.user.name}
+escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 
 # MAB transformation property pointing to a directory where all fulltexts are stored.
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
