--- a/pubman/pubman_logic/pom.xml
+++ b/pubman/pubman_logic/pom.xml
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation</artifactId>
-			<version>1.0.44</version>
+			<version>1.0.45-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
