--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -2,19 +2,19 @@
     <parent>
         <artifactId>pubman</artifactId>
         <groupId>de.mpg.escidoc.pubman</groupId>
-        <version>6.1.1-SNAPSHOT</version>
+        <version>6.1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>de.mpg.escidoc.pubman</groupId>
     <artifactId>pubman_ear</artifactId>
     <name>pubman_ear</name>
     <packaging>ear</packaging>
-    <version>6.1.1-SNAPSHOT</version>
+    <version>6.1.1</version>
 
     <scm>
-        <connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</connection>
-        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_ear</developerConnection>
-        <url>https://zim02.gwdg.de/repos/common/</url>
+        <connection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.1.1/pubman_ear</connection>
+        <developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/tags/pubman-6.1.1/pubman_ear</developerConnection>
+        <url>https://zim02.gwdg.de/repos/common/tags/pubman-6.1.1/pubman_ear</url>
     </scm>
 
     <build>
@@ -449,20 +449,20 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.44-SNAPSHOT</version>
+            <version>1.0.44</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.41-SNAPSHOT</version>
+            <version>1.1.41</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>citationmanager</artifactId>
-            <version>1.0.47-SNAPSHOT</version>
+            <version>1.0.47</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -476,7 +476,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>structuredexportmanager</artifactId>
-            <version>1.0.44-SNAPSHOT</version>
+            <version>1.0.44</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -511,7 +511,7 @@
         <dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>transformation</artifactId>
-            <version>1.0.29-SNAPSHOT</version>
+            <version>1.0.29</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
@@ -545,14 +545,14 @@
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_logic</artifactId>
-            <version>6.1.1-SNAPSHOT</version>
+            <version>6.1.1</version>
             <scope>compile</scope>
             <type>ejb</type>
         </dependency>
         <dependency>
             <groupId>de.mpg.escidoc.pubman</groupId>
             <artifactId>pubman_presentation</artifactId>
-            <version>6.1.1-SNAPSHOT</version>
+            <version>6.1.1</version>
             <scope>compile</scope>
             <type>war</type>
         </dependency>
@@ -573,7 +573,7 @@
         <dependency>
            <groupId>de.mpg.escidoc.services</groupId>
            <artifactId>pid_cache_presentation</artifactId>
-           <version>0.1.4-SNAPSHOT</version>
+           <version>0.1.4</version>
            <scope>compile</scope>
            <type>war</type>
        </dependency>
