--- a/common_services/citationmanager/src/test/resources/CitationStyles/Default/test.properties
+++ b/common_services/citationmanager/src/test/resources/CitationStyles/Default/test.properties
@@ -1,10 +1,10 @@
 # Plain tests
-plain.test.xml=Test/TestCollection.xml
+plain.test.xml=Default/DefaultTestCollection.xml
 
 # Substantial test
 substantial.skip.test=true
 substantial.ignore.multiply.spaces=true
 substantial.snippet.placeholder.xpath=//content-model-specific/bibliographicCitation
 substantial.test.xml=Test/TestCollection.xml
-substantial.expected.key=TEST: 
-substantial.expected.xpath=//publication/abstract[contains(.,'TEST: ')]
+substantial.expected.key=DEFAULT: 
+substantial.expected.xpath=//publication/abstract[contains(.,'DEFAULT: ')]
