--- a/common_services/dataacquisition_ear/pom.xml
+++ b/common_services/dataacquisition_ear/pom.xml
@@ -2,18 +2,18 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.42</version>
+		<version>1.0.42-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>dataacquisition_ear</artifactId>
 	<packaging>ear</packaging>
 	<name>dataacquisition_ear</name>
-	<version>1.0.39</version>
+	<version>1.0.39-SNAPSHOT</version>
 	<scm>
-	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.42/dataacquisition_ear</connection>
-    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.42/dataacquisition_ear</developerConnection>
-    <url>https://zim02.gwdg.de/repos/common/dataacquisition_ear/tags/common_services-1.0.42/dataacquisition_ear</url>
+	  <connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/dataacquisition_ear</connection>
+    <developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/dataacquisition_ear</developerConnection>
+    <url>https://zim02.gwdg.de/repos/common/dataacquisition_ear</url>
   </scm>
 	<build>
 		<plugins>
@@ -196,7 +196,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.45</version>
+			<version>1.0.45-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -250,14 +250,14 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition</artifactId>
-			<version>1.0.39</version>
+			<version>1.0.39-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition_presentation</artifactId>
-			<version>1.0.39</version>
+			<version>1.0.39-SNAPSHOT</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
@@ -265,7 +265,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>transformation</artifactId>
-			<version>1.0.30</version>
+			<version>1.0.30-SNAPSHOT</version>
 			<scope>compile</scope>
 			<type>ejb</type>
 		</dependency>
