--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -20,7 +20,15 @@
     <build>
         <defaultGoal>package</defaultGoal>
         <finalName>${project.artifactId}</finalName>
-
+		<resources>
+			<resource>
+				<directory>src/izpack</directory>
+				<includes>
+					<include>Info.html</include>
+				</includes>
+				<filtering>true</filtering>
+			</resource>
+		</resources>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
