--- a/common_services/pid_cache_presentation/pom.xml
+++ b/common_services/pid_cache_presentation/pom.xml
@@ -3,19 +3,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.43-SNAPSHOT</version>
+		<version>1.0.43</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>pid_cache_presentation</artifactId>
 	<name>pid_cache_presentation</name>
-	<version>0.1.6-SNAPSHOT</version>
+	<version>0.1.6</version>
 	<packaging>war</packaging>
 	
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/pid_cache_presentation</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/pid_cache_presentation</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.43</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.43</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.43</url>
 	</scm>
 	
 	<build>
@@ -58,13 +58,13 @@
 		<dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>framework_access</artifactId>
-            <version>1.0.46-SNAPSHOT</version>
+            <version>1.0.46</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
             <groupId>de.mpg.escidoc.services</groupId>
             <artifactId>common_logic</artifactId>
-            <version>1.1.43-SNAPSHOT</version>
+            <version>1.1.43</version>
             <scope>provided</scope>
         </dependency>
 		<dependency>
